--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: abakpress/ruby:$RUBY_IMAGE_TAG
     environment:
       - BUNDLE_PATH=/bundle/$DOCKER_RUBY_VERSION
+      - BUNDLE_CONFIG=/app/.bundle/config
       - SSH_AUTH_SOCK=/ssh/auth/sock
       - TEST_DB_HOST=db
       - TEST_DB_NAME=docker
